syntax = "proto3";
package chat_sistOS;
import "user.proto";
import "message.proto";

message UserList {
    // verdadero = usuarios conectados
    // falso = usuario especifico
    bool list = 1;
    // se manda vacio si es para todos, nombre de usuario si es especifico
    string user_name = 2;
}

message UsersOnline{
    // Lista de usuarios
    repeated User users = 1;
}

message UserOption{
    // opcion a realizar
    int32 op = 1;
    // crear nuevo usuario
    NewUser createUser = 2;
    // ver usuarios conectados/ver estado de usuario
    UserList userList = 3;
    // cambiar estado de usuario
    Status status = 4;
    // enviar mensaje
    Message message = 5;
}

message Answer{
    // opcion recibida
    int32 op = 1;
    // 400 error, 200 OK
    int32 response_status_code = 2;
    // Mensaje de respuesta
    string response_message = 3;
    // Lista de usuarios
    UsersOnline users_online = 4;
    // Mensaje recibido
    Message message = 5;
    // Usuario 
    User user = 6;
    // Status del usuario
    Status status = 7;
}
